--- a/MitarbeiterVerwaltung.Gui/MainPage.xaml
+++ b/MitarbeiterVerwaltung.Gui/MainPage.xaml
@@ -4,10 +4,24 @@
              x:Class="MitarbeiterVerwaltung.Gui.MainPage"
              xmlns:viewmodels="clr-namespace:MitarbeiterVerwaltung.Core.ViewModels;assembly=MitarbeiterVerwaltung.Core"
              x:DataType="viewmodels:MainViewModel"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              >
 
+    <ContentPage.Behaviors>
+        <toolkit:EventToCommandBehavior 
+            EventName="Appearing"
+            Command="{Binding GetAllCommand}"/>
+    </ContentPage.Behaviors>
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <toolkit:IsNotNullConverter x:Key="IsNotNullConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>    
+
     <!--Eingabe-->
-    <Grid ColumnDefinitions="*,*" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto">
+    <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,*">
+        <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto" >
         <StackLayout Grid.Row="0">
             <Label Text="Eingabe Name" />
             <Entry Text="{Binding Vorname}" />
@@ -39,6 +53,57 @@
         </StackLayout>
 
         <Button Grid.Row="6" Text="Mitarbeiter hinzufügen" Command="{Binding AddCommand}"/>
+        </Grid>
+        <Grid Grid.Column="1" RowDefinitions="Auto, *">
+            <Label Text="Alle gespeicherten Einträge" />
+            <CollectionView ItemsSource="{Binding Mit}"
+                            SelectedItem="{Binding SelectedMitarbeiter}"
+                            SelectionMode="Single"
+                            Grid.Row="1">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Padding="10" ColumnDefinitions="*,*,*,*,*,*,*">
+                            <Label Text="{Binding Vorname}" Grid.Column="0"/>
+                            <Label Text="{Binding Nachname}" Grid.Column="1"/>
+                            <Label Text="{Binding Alter}" Grid.Column="2"/>
+                            <Label Text="{Binding Abteilung}" Grid.Column="3"/>
+                            <Label Text="{Binding EintrittsDatum, StringFormat='{0: yyy-MM-dd}'}" Grid.Column="4"/>
+                            <Label Text="{Binding IstVollzeit}" Grid.Column="5"/>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+                
+            </CollectionView>
+        </Grid>
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" ColumnDefinitions="*,*">
+            <!--Löschen Grid-->
+            <Grid IsVisible="{Binding SelectedMitarbeiter, Converter={StaticResource IsNotNullConverter}}" RowDefinitions="*" Margin="20,10,0,0">
+                <!--Anzeige des Mitarbeiters-->
+                <StackLayout>
+                    <Label Text="{Binding SelectedMitarbeiter.Id}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.Vorname}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.Nachname}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.Alter}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.Abteilung}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.EintrittsDatum, StringFormat='{0: yyyy-MM-dd}'}"/>
+                    <Label Text="{Binding SelectedMitarbeiter.IstVollzeit}"/>
+                    <Button Text="Eintrag löschen" BackgroundColor="Red" Command="{Binding DeleteCommand}"/>
+                </StackLayout>
+                <!--Löschen Button-->
+            </Grid>
+            <Grid Grid.Column="1" IsVisible="{Binding SelectedMitarbeiter, Converter={StaticResource IsNotNullConverter}}">
+                <StackLayout>
+                    <Entry Text="{Binding SelectedMitarbeiter.Id}"/>
+                    <Entry Text="{Binding SelectedMitarbeiter.Vorname}"/>
+                    <Entry Text="{Binding SelectedMitarbeiter.Nachname}"/>
+                    <Entry Text="{Binding SelectedMitarbeiter.Alter}" Keyboard="Numeric"/>
+                    <Entry Text="{Binding SelectedMitarbeiter.Abteilung}"/>
+                    <DatePicker Date="{Binding SelectedMitarbeiter.EintrittsDatum, StringFormat='{0: yyyy-MM-dd}'}"/>
+                    <CheckBox IsChecked="{Binding SelectedMitarbeiter.IstVollzeit}"/>
+                    <Button Text="Eintrag Verändern" BackgroundColor="Orange" Command="{Binding UpdateCommand}"/>
+                </StackLayout>
+            </Grid>
+        </Grid>
     </Grid>
     
     
